# snailquote

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: escape.rs  escape_quoted.rs  round_trip.rs  unescape.rs
src/: lib.rs
