[package]
name = "snailquote"
description = "Escape and unescape strings with shell-inspired quoting"
version = "0.1.1"
authors = ["Euan Kemp <euank@euank.com>"]
homepage = "https://github.com/euank/snailquote"
repository = "https://github.com/euank/snailquote"
readme = "README.md"
keywords = ["quote", "escape", "shell-escape", "unescape"]
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
unicode_categories = "0.1.1"

[dev-dependencies]
quickcheck = "0.6"
